Fix dependency vulnerabilities

--- a/ui/client/package.json
+++ b/ui/client/package.json
@@ -39,6 +39,7 @@
     "typescript": "~5.7.2"
   },
   "overrides": {
-    "vite": "^6.2.5"
+    "vite": "^6.2.6",
+    "http-proxy-middleware": "^3.0.4"
   }
 }
